--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@howljs/calendar-kit": "^2.5.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-  "react-native-safe-area-context": "^4.5.0",
     "expo": "~54.0.12",
+    "expo-calendar": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-web": "^0.21.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
+  }
 }
