--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@howljs/calendar-kit": "^2.5.5",
+    "@react-native-community/datetimepicker": "^8.4.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.12",
